css: fix table alignment

--- a/gitoff.css
+++ b/gitoff.css
@@ -14,6 +14,9 @@ h2 {
 	font-size: 1.25em;
 }
 
+table {
+	border-spacing: 0;
+}
 th {
 	color: #666;
 	font-weight: normal;
